# ktouch

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Messages.sh  README  README.md  TODO.KDE4  build-install-run  colemak.keyboard.xml  colemak.ktouch.xml  ktouch.appdata.xml  ktouch.desktop  ktouch.lsm  org.kde.ktouch.appdata.xml  org.kde.ktouch.desktop  snapcraft.yaml
data/courses/: CMakeLists.txt  ara.xml  bg1.xml  bg2.xml  br.xml  cat.xml  ch1.xml  ch2.xml  cz.xml  de.dvorak.xml  de.neo.xml  de1.xml  de2.xml  de3.xml  dk1.xml  dk2.xml  es.dvorak.xml  es1.xml  es2.xml  es3.xml  es4.xml  fi.patch  fi.xml  fr.auto1.xml  fr.auto2.xml  fr.bepo.xml  fr.dvarok.xml  fr.xml  gb.xml  gr.xml  in.mal_enhanced1.xml  in.mal_enhanced2.xml  ir.xml  it.xml  it2.xml  lt.std.xml  lv.modern.xml  nl1.xml  nl2.xml  no.xml  (+13 more)
data/keyboardlayouts/: CMakeLists.txt  ara.xml  be.xml  bg.xml  br.xml  ch.fr.xml  ch.xml  cz.qwerty.xml  cz.xml  de.dvorak.xml  de.neo2.xml  de.xml  dk.xml  ee.xml  es.dvorak.xml  es.xml  fi.xml  fr.bepo.xml  fr.dvorak.xml  fr.xml  gb.dvorak.xml  gb.xml  hu.xml  il.xml  in.kan.xml  in.mal_enhanced.xml  in.tam_unicode.xml  ir.xml  it.xml  jp.xml  latam.xml  lt.std.xml  lv.modern.xml  mn.xml  nl.xml  no.xml  pt.xml  ru.legacy.xml  ru.xml  se.xml  (+10 more)
images/: CMakeLists.txt  accuracymeter.svgz  balloontip.svgz  charactersperminutemeter.svgz  elapsedtimemeter.svgz  ellapsedtimemeter.svgz  meterbox.svgz  resizegrip.svgz  speedmeter.svgz  statusled.svgz  timemeter.svgz  trainingscreen.svgz
keyboards/: CMakeLists.txt  Makefile.am  ar.keyboard.xml  be.keyboard  bg.keyboard  bg.keyboard.xml  colemak.keyboard.xml  creating_keyboard_layouts.txt  cs.qwerty.keyboard.xml  cs.qwertz.keyboard.xml  cz.keyboard  de-2.keyboard  de-ch.keyboard  de-ch2.keyboard  de.dvorak.type2.keyboard.xml  de.keyboard  de.keyboard.xml  de.keypad.keyboard  de.neo.keyboard  de.neo2.all.keyboard.xml  de.swiss.keyboard  de.xml  de_ch.keyboard.xml  dk.keyboard  dk.keyboard.xml  dvorak.keyboard  dvorak.keyboard.xml  dvorak_es.keyboard  dvorak_fr.keyboard  dvorak_fr.keyboard.xml  dvorak_se.keyboard  ee.keyboard  ee.keyboard.xml  el.keyboard  el.keyboard.xml  en.dvorak.keyboard  en.keyboard  en.keyboard.xml  en_gb.dvorak.keyboard.xml  en_gb.qwerty.keyboard.xml  (+63 more)
keyboards/Turkish/: CMakeLists.txt  tr.f.keyboard.xml
keyboards/arabic/: CMakeLists.txt
keyboards/brazilian/: CMakeLists.txt  pt.br.keyboard.xml
keyboards/bulgarian/: CMakeLists.txt
keyboards/czech/: CMakeLists.txt  cs.qwertz.keyboard.xml
keyboards/danish/: CMakeLists.txt
keyboards/english/: CMakeLists.txt  en.keyboard.xml  en_alphagrip.keyboard.xml  en_gb.dvorak.keyboard.xml
keyboards/estonian/: CMakeLists.txt
keyboards/finnish/: CMakeLists.txt
keyboards/french/: CMakeLists.txt  fr.keyboard.xml
keyboards/german/: CMakeLists.txt  de.dvorak.type2.keyboard.xml  de.keyboard.xml
keyboards/greek/: CMakeLists.txt  el.keyboard.xml
keyboards/hebrew/: CMakeLists.txt  he.keyboard.xml
keyboards/hungarian/: CMakeLists.txt  hu.keyboard.xml
keyboards/italian/: CMakeLists.txt
keyboards/kannada/: CMakeLists.txt
keyboards/latin/: CMakeLists.txt  lat.keyboard.xml
keyboards/lithuanian/: CMakeLists.txt
keyboards/norwegian/: CMakeLists.txt  no.keyboard.xml
keyboards/old_and_contributed/: Belgium(nederlands).keyboard  de-ch.keyboard  de_neo.keyboard  dk.keyboard  en.keyboard  es2.keyboard  fi.keyboard  fr.keyboard  fr_a.keyboard  hu.keyboard  it.keyboard  la.keyboard  lt.baltic(basic).keyboard  lt.sdt.fingers_by_KP_Typing_Turor.keyboard  lt.sdt.fingers_by_en.keyboard  lt.sdt.keyboard  nn.keyboard  no.keyboard  number.keyboard  se.keyboard  sl.keyboard  uk.typewriter.keyboard
ktouch/: Makefile.am  controlkey.cpp  controlkey.h  fingerkey.cpp  fingerkey.h  hiddenkey.cpp  hiddenkey.h  ktouch.cpp  ktouch.h  ktouchapp.cpp  ktouchapp.h  ktouchui.rc  main.cpp  normalkey.cpp  normalkey.h  optionGeneral.cpp  optionGeneral.h  optionGeneralDlg.ui  optionKeyboard.cpp  optionKeyboard.h  optionKeyboardDlg.ui  optionTraining.cpp  optionTraining.h  optionTrainingDlg.ui  slideLine.cpp  slideLine.h  touchEdit.cpp  touchEdit.h  touchEditLayout.ui  touchKeyboard.cpp  touchLineLayout.ui  touchSplash.cpp  touchSplash.h  touchStatWindow.cpp  touchStatWindow.h  touchStatWindowLayout.ui  touchStatus.cpp  touchStatus.h  touchStatusLayout.ui  touchTest.cpp  (+14 more)
src/: CMakeLists.txt  Makefile.am  Messages.sh  application.cpp  application.h  colorsconfigwidget.cpp  colorsconfigwidget.h  customlessoneditordialog.cpp  customlessoneditordialog.h  customlessoneditorwidget.cpp  customlessoneditorwidget.h  keyboardlayoutmenu.cpp  keyboardlayoutmenu.h  ktouch.cpp  ktouch.h  ktouch.kcfg  ktouch.rc  ktouch_build_config.h.in  ktouchcharstats.cpp  ktouchcharstats.h  ktouchchartwidget.cpp  ktouchchartwidget.h  ktouchcoloreditor.cpp  ktouchcoloreditor.h  ktouchcoloreditor_dlg.ui  ktouchcoloreditordialog.cpp  ktouchcoloreditordialog.h  ktouchcolorscheme.cpp  ktouchcolorscheme.h  ktouchconfiguration.cpp  ktouchconfiguration.h  ktouchcontext.cpp  ktouchcontext.h  ktouchdefaults.cpp  ktouchdefaults.h  ktoucheditor.cpp  ktoucheditor.h  ktoucheditor_dlg.ui  ktoucheditorlayout.ui  ktouchkey.cpp  (+96 more)
src/bindings/: utils.cpp  (+3 more)
training/: CMakeLists.txt  Makefile.am  arabic.ktouch.xml  be_nederlands_junior.ktouch  be_nederlands_junior.ktouch.xml  bulgarian.ktouch.xml  bulgarian_long.ktouch.xml  catalan.ktouch  catalan.ktouch.xml  czech.ktouch.xml  danish-2.ktouch  danish.ktouch  danish.ktouch.xml  danish2.ktouch.xml  dutch.ktouch  dvorak-ABCD.ktouch  dvorak-fr-1.ktouch.xml  dvorak-fr-2.ktouch.xml  dvorak.ktouch  dvorak.ktouch.xml  dvorak_ABCD.ktouch.xml  dvorak_es.ktouch.xml  el.ktouch.xml  english.ktouch  english.ktouch.xml  espanol.ktouch.xml  espanol2.ktouch.xml  finnish.ktouch.xml  finnish_for_kids.ktouch.xml  french-2.ktouch  french.ktouch  french.ktouch.xml  french2.ktouch.xml  german-2.ktouch  german-3.ktouch  german.dvorak.type2.ktouch.xml  german.ktouch  german.ktouch.xml  german.neo.ktouch.xml  german.neo2.ktouch.xml  (+29 more)
(+530 files in other folders)
