# This file you have to edit. Change the name here
SUBDIRS = ktouch keyboards training 

# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

# place KTouch in the start menu under utilities
kdelnkdir = $(kde_appsdir)/Utilities
kdelnk_DATA = ktouch.desktop

# adding the config file to ktouch dir
rcdir = $(kde_datadir)/ktouch
rc_DATA = ktouchui.rc

KDE_ICON = ktouch