# This file you have to edit. Change the name here
SUBDIRS = src keyboards training sounds graphics

# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign

# place KTouch in the start menu under utilities
kdelnkdir = $(kde_appsdir)/Edutainment/Miscellanous
kdelnk_DATA = ktouch.desktop

KDE_ICON = ktouch
