set(image_files
    accuracymeter.svgz
    charactersperminutemeter.svgz
    elapsedtimemeter.svgz
    meterbox.svgz
    resizegrip.svgz
    statusled.svgz
    trainingscreen.svgz
    trainingscreen-footer.png
    trainingscreen-header.png
    trainingscreen-toolbar.png
    trainingscreen-viewport.png
    trainingscreen-viewport-shadow.png
)

install( FILES ${image_files} DESTINATION ${DATA_INSTALL_DIR}/ktouch/images)
