



########### install files ###############

install( FILES 
  be.keyboard
  bg.keyboard
  de-2.keyboard
  de-ch2.keyboard
  de-ch.keyboard
  de.keyboard
  de_neo.keyboard
  dk.keyboard
  dvorak_es.keyboard
  dvorak.keyboard
  dvorak_se.keyboard
  ee.keyboard
  en.dvorak.keyboard
  en.keyboard
  es.keyboard
  fi.keyboard
  fr_a.keyboard
  fr_ch.keyboard
  fr.keyboard
  he.keyboard
  hu.keyboard
  it.keyboard
  la.keyboard
  nn.keyboard
  no.keyboard
  number.keyboard
  pl.keyboard
  pt.br.keyboard
  pt.keyboard
  ru.2.keyboard
  ru.3.keyboard
  ru.basic.keyboard
  ru.keyboard
  ru.winkeys.keyboard
  se.keyboard
  sl.keyboard
  uk.basic.keyboard
  uk.typewriter.keyboard
  uk.winkeys.keyboard DESTINATION ${DATA_INSTALL_DIR}/ktouch
)



