# adding keyboards
keyboarddir = $(kde_datadir)/ktouch
keyboard_DATA = \
be.keyboard \
bg.keyboard \
de-2.keyboard \
de-ch2.keyboard \
de-ch.keyboard \
de.keyboard \
de_neo.keyboard \
dk.keyboard \
dvorak_es.keyboard \
dvorak.keyboard \
dvorak_se.keyboard \
ee.keyboard \
en.keyboard \
es.keyboard \
fi.keyboard \
fr_a.keyboard \
fr_ch.keyboard \
fr.keyboard \
he.keyboard \
hu.keyboard \
it.keyboard \
la.keyboard \
no.keyboard \
number.keyboard \
pl.keyboard \
pt-br.keyboard \
pt.keyboard \
ru2.keyboard \
ru3.keyboard \
ru-basic.keyboard \
ru.keyboard \
ru-typewriter.keyboard \
ru-winkeys.keyboard \
se.keyboard \
sl.keyboard \
ua-basic.keyboard \
ua-typewriter.keyboard \
ua-winkeys.keyboard