# adding keyboards
keyboarddir = $(kde_datadir)/ktouch
keyboard_DATA = \
be.keyboard \
bg.keyboard \
de.keyboard \
de.keypad.keyboard \
de.neo.keyboard \
de.swiss.keyboard \
dk.keyboard \
ee.keyboard \
en.dvorak.keyboard \
en.keyboard \
es.dvorak.keyboard \
es.keyboard \
fi.keyboard \
fr.a.keyboard \
fr.keyboard \
fr.swiss.keyboard \
he.keyboard \
hu.keyboard \
it.keyboard \
la.keyboard \
nn.keyboard \
pl.keyboard \
pt.br.keyboard \
pt.keyboard \
ru.2.keyboard \
ru.3.keyboard \
ru.basic.keyboard \
ru.keyboard \
ru.typewriter.keyboard \
ru.winkeys.keyboard \
sv.dvorak.keyboard \
sv.keyboard \
sl.keyboard \
uk.basic.keyboard \
uk.typewriter.keyboard \
uk.winkeys.keyboard
