# adding keyboards
keyboarddir = $(kde_datadir)/ktouch
keyboard_DATA = \
bg.keyboard \
de.keyboard \
de.keypad.keyboard \
de.neo.keyboard \
de.swiss.keyboard \
dk.keyboard \
en.dvorak.keyboard \
en.keyboard \
fr.a.keyboard \
fr.keyboard \
fr.swiss.keyboard \
dvorak_fr.keyboard \
hu.keyboard \
he.keyboard \
it.keyboard \
nb.keyboard \
sl.keyboard \
pl.keyboard \
sv.keyboard \
tr.f.keyboard \
tr.q.keyboard 


#sv.dvorak.keyboard \
#sv.keyboard \
#uk.basic.keyboard \
#uk.typewriter.keyboard \
#uk.winkeys.keyboard
#ru.winkeys.keyboard \
#ru.2.keyboard \
#ru.3.keyboard \
#ru.basic.keyboard \
#ru.keyboard \
#ru.typewriter.keyboard \
#pt.br.keyboard \
#pt.keyboard \
#nn.keyboard \
#la.keyboard \
#hu.keyboard \
#ee.keyboard \
#fi.keyboard \
#es.dvorak.keyboard \
#es.keyboard 
