



########### install files ###############

install(FILES 
  bulgarian.ktouch.xml
  bulgarian_long.ktouch.xml
  catalan.ktouch.xml  
  czech.ktouch.xml
  danish2.ktouch.xml  
  danish.ktouch.xml  
  dvorak_ABCD.ktouch.xml  
  dvorak_es.ktouch.xml  
  dvorak.ktouch.xml  
  dvorak-fr-1.ktouch.xml
  dvorak-fr-2.ktouch.xml
  el.ktouch.xml
  english.ktouch.xml  
  espanol.ktouch.xml
  espanol2.ktouch.xml
  finnish_for_kids.ktouch.xml
  finnish.ktouch.xml
  french2.ktouch.xml  
  french.ktouch.xml  
  german2.ktouch.xml  
  german3.ktouch.xml  
  german.ktouch.xml  
  german.neo.ktouch.xml  
  german.number.ktouch.xml  
  hungarian_expert.ktouch.xml
  hungarian_expert.ktouch.xml
  hungarian.ktouch.xml
  italian.ktouch.xml  
  latin.ktouch.xml
  nederlands_junior.ktouch.xml  
  nederlands.ktouch.xml  
  norwegian.ktouch.xml  
  polish.ktouch.xml  
  russian2ktouch.xml
  russian.ktouch.xml
  russian_long.ktouch.xml
  slovenian.ktouch.xml
  spanish.ktouch.xml 
  ukrainian.ktouch.xml
  DESTINATION ${DATA_INSTALL_DIR}/ktouch)

